salesU/k8s/pingfederate/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    app: pingfederate
  name: pingfederate
spec:
  rules:
  - host: pingfederate.anydevops.com
    http:
      paths:
      - backend:
          serviceName: pingfederate
          servicePort: 443
        path: /
  tls:
  - hosts:
    - pingfederate.anydevops.com
    secretName: anydevops-tls-secret
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    app: pingfederate-admin
  name: pingfederate-admin
spec:
  rules:
  - host: pingfederate-admin.anydevops.com
    http:
      paths:
      - backend:
          serviceName: pingfederate-admin
          servicePort: 9999
        path: /pingfederate
  tls:
  - hosts:
    - pingfederate-admin.anydevops.com
    secretName: anydevops-tls-secret

---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: pingfederate
#   namespace: anydevops
#   annotations:
#     kubernetes.io/ingress.class: alb
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
#   labels:
#     app: pingfederate
# spec:
#   rules:
#     - host: pingfederate.anydevops.com
#       http:
#         paths:
#           - path: /*
#             backend:
#               serviceName: pingfederate
#               servicePort: 443
#     - host: pingfederate-admin.anydevops.com
#       http:
#         paths:
#           - path: /pingfederate
#             backend:
#               serviceName: pingfederate-admin
#               servicePort: 443
    # - host: OAuthPlayground.anydevops.com
    #   http:
    #     paths:
    #       - path: /OAuthPlayground/*
    #         backend:
    #           serviceName: pingfederate
    #           servicePort: 443
